src/sass/layout/_header.scss
@use "../abstracts";

.main-navigation {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 24px;

  @media screen and (min-width: abstracts.$lg) {
    padding-bottom: 96px;
  }

  @media screen and (min-width: abstracts.$sm) {
    padding-top: 16px;
  }

  @media screen and (min-width: abstracts.$md) {
    padding-top: 24px;
  }

  @media screen and (min-width: abstracts.$lg) {
    padding-top: 32px;
  }

  @media screen and (min-width: abstracts.$xlg) {
    padding-top: 40px;
  }

  @media screen and (min-width: abstracts.$xxlg) {
    padding-top: 48px;
  }

  &__right-wrapper {
    display: none;

    @media screen and (min-width: abstracts.$lg) {
      display: block;
    }
  }
}

.logo {
  font-family: "Oleo Script", "Brush Script MT", fantasy;
  color: abstracts.$color-text-primary;
  text-decoration: none;
  font-size: 1.5rem;
  line-height: 1.375;
  padding: 7px 0px 8px 8px;

  &:focus {
    outline-color: abstracts.$color-brand-primary;
  }
}

.site-navigation {
  display: flex;
  flex-direction: column;
  // justify-content: flex-end;
  justify-content: center;
  gap: 32px;
  align-items: center;
  list-style-type: none;
  margin-left: auto;
  padding-left: 0;
  font-family: "Poppins", "Verdana", sans-serif;
  font-weight: 500;
  font-size: 2.25rem;
  line-height: 1.375;
  height: 100%;

  @media screen and (min-width: abstracts.$lg) {
    flex-direction: row;
    flex-wrap: wrap;
    gap: 8px;
    padding: 32px 0;
    font-size: 1rem;
  }

  @media screen and (min-width: abstracts.$xlg) {
    gap: 16px;
  }

  &__item {
    &:first-child,
    &:last-child {
      margin-left: auto;
    }
  }

  &__link {
    text-decoration: none;
    // color: abstracts.$color-text-tertiary;
    color: abstracts.$color-text-primary;
    padding: 10px;

    // &:focus {
    //   text-decoration: underline;
    // }

    &:hover {
      color: abstracts.$color-brand-primary;
      @include abstracts.transition(color);
    }

    &:active {
      color: abstracts.$highlight-brand-primary;
    }

    &--active {
      color: abstracts.$color-brand-primary;
    }
  }
}

.theme-switch {
  display: block;
  margin-left: auto;
  background-color: abstracts.$color-background;
  border: none;

  &__icon {
    cursor: pointer;

    color: abstracts.$color-text-primary;
    @include abstracts.transition(color);

    &:hover {
      color: abstracts.$color-brand-primary;
    }

    &:focus {
      outline: 2px solid abstracts.$color-brand-primary;
    }

    &:active {
      color: abstracts.$highlight-brand-primary;
    }
  }
}

